--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
-  <base href="/" />
-
+  <!-- <base href="/" /> -->
+  <script>
+    (function() {
+      window['_app_base'] = '/' + window.location.pathname.split('/')[1];
+    })();
+  </script>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
