--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <!-- <base href="/" /> -->
   <script>
-    window['base-href'] = window.location.pathname.split("/") >= 1 ? "/" + window.location.pathname.split("/")[1] : "/";
+    window['base-href'] = window.location.pathname.split("/").length >= 1 ? "/" + window.location.pathname.split("/")[1] : "/";
     console.log(window['base-href']);
   </script>
 
