Fixing dynamic base hrefs

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
-  <!-- <base href="/" /> -->
+  <base href="/" />
   <script>
     window['base-href'] = window.location.pathname.split("/").length >= 1 ? "/" + window.location.pathname.split("/")[1] : "/";
     console.log(window['base-href']);
