Added google signin

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <title>Ionic App</title>
 
   <base href="/" />
+  
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="314759812529-ju29oro3ndkfu0a04hop1f1fimdrkbf9.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
